tests/miniJava/neg/000226_mutation.MiniJava
class java { public static void else ( String [ ] java ) { { } } }
